[package]
name = "jenkins_api"
version = "0.7.0"
authors = ["François Mockers <mockersf@gmail.com>"]
description = "Bindings for the Jenkins JSON API"
repository = "https://github.com/mockersf/jenkins-api.rs"
homepage = "https://github.com/mockersf/jenkins-api.rs"
documentation = "https://docs.rs/jenkins_api"
keywords = ["jenkins"]
license = "MIT"
readme = "README.md"
build = "build.rs"
edition = "2018"

[badges]
travis-ci = { repository = "mockersf/jenkins-api.rs" }

[dependencies]
reqwest = { version = "0.10", features = [ "blocking", "json" ] }
url = "2.1"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_urlencoded = "0.6"
urlencoding = "1.0.0"
regex = "1.3"
log = "0.4"
thiserror = "1.0"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
env_logger = "0.7"
mockito = "0.25"
spectral = "0.6"
proptest = "0.9"
