[package]
name = "jenkins_api"
version = "0.8.0"
authors = ["François Mockers <mockersf@gmail.com>"]
description = "Bindings for the Jenkins JSON API"
repository = "https://github.com/mockersf/jenkins-api.rs"
homepage = "https://github.com/mockersf/jenkins-api.rs"
documentation = "https://docs.rs/jenkins_api"
keywords = ["jenkins"]
license = "MIT"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "mockersf/jenkins-api.rs" }

[dependencies]
url = "2.2"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_urlencoded = "0.7"
urlencoding = "1.1"
regex = "1.4"
log = "0.4"
thiserror = "1.0"

[dependencies.reqwest]
default-features = false
features = [ "blocking", "json" ]
version = "0.10"

[dev-dependencies]
env_logger = "0.8"
mockito = "0.28"
spectral = "0.6"
proptest = "0.10"

[features]
default = ["reqwest/default-tls"]
extra-fields-visibility = []
rustls-tls = ["reqwest/rustls-tls"]
